# MPC-Assignment

./: Assignment Planning in an LQR Environment with CEM and MPPI.md  Assignment Planning in an LQR Environment with CEM.md  Experimental Report2_Policy Prior.md  Experimental Report_Policy Prior.md  IGO.py  IGO_SAC_penalized.py  IGO_complete_sample_based.py  README.md  TDMPC.md  compare.py  compare_CEM_and_IGO.py  compare_CEM_and_IGO_jax.py  compare_CEM_and_IGO_results.npz  compare_expN.py  compare_expN_results.npz  compare_expN_shard0.npz  compare_expN_shard1.npz  compare_expN_shard2.npz  compare_expN_shard3.npz  compare_expN_status_shard0.txt  compare_expN_status_shard1.txt  compare_expN_status_shard2.txt  compare_expN_status_shard3.txt  compare_results.npz  compare_results_beifen.npz  convert_sac_ckpt.py  envs.py  evaluate.py  lqr_env.py  lqr_env_jax.py  optimal.py  optimal_jax.py  output.txt  phase1.py  phase2.py  planners_jax.py  planning_env_research.md  policy_prior.py  policy_prior_CEM.py  policy_prior_IGO.py  (+26 more)
results/: clqr__cem.npz  clqr__mppi.npz  clqr__random-shooting.npz  clqr__tdmpc-noprior.npz  lqr__cem.npz  lqr__mppi.npz  lqr__optimal.npz  lqr__pp-conservative.npz  lqr__pp-large.npz  lqr__pp-random-shooting.npz  lqr__random-shooting.npz  lqr__sac.npz  lqr__tdmpc-noprior.npz  lqr__tdmpc-vf.npz  lqr__tdmpc.npz  switched__cem.npz  switched__mppi.npz  switched__random-shooting.npz  switched__tdmpc-noprior.npz  terminal__cem.npz  terminal__mppi.npz  terminal__random-shooting.npz  terminal__tdmpc-noprior.npz  terminal__tdmpc-vf.npz
